[2020/2/26] Added flint-and-steel to player start items when they spawn in the Outback.
[2020/2/25] Add climbable trapdoors.
[2020/2/25] Added regular craft recipes for inner and outer corner stairs.
[2020/2/23] Fixed some oversights in the new passive-healing system.
[2020/2/23] Player can no longer die from over-eating.
[2020/2/22] Redesigned the hunger/passive-healing system, including how bandages work.
[2020/2/22] Player's maximum HP increases as they gain mineral XP.
[2020/2/22] Increased the cap on players' max mineral XP.
[2020/2/21] Attempt to fix the long-standing bug where the HUD stat-icons would not show the real values.
[2020/2/21] Finally fixed the bug where player could sometimes fall through the world after being kicked off a sled.
[2020/2/19] Updated city-block description to inform that it can save your bed's respawn pos during PvP.
[2020/2/18] 7x7x7 protectors placed by players without a KEY are now timed protectors, which expire after a while. Player can place regular, permanent protectors by crafting a KEY, or by using the advanced protectors instead (which never expire).
[2020/2/18] Grant a basic protector to new players the first time they craft a PoC. This is to assist new players in guarding their stuff, considering how difficult it is to find mese by mining. A future update will make these into "timed" protectors, which expire after some time.
[2020/2/18] Players may not place protectors near the Outback gate's exit location in the overworld. Existing protectors, if any, are left untouched. However, if their owner digs them, they won't be able to put them back until the gate moves again ….
[2020/2/18] Added secret stone and rackstone trapdoors.
[2020/2/18] Grant some cash to player the first (and only the first) time they craft a PoC. Should give new players a start on the economy and make setting up shops more worthwhile. Note: this should be considered experimental for now ….
[2020/2/18] Improve quality of stone door camouflage.